Ajout vocalisation de l'accueil

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,5 +83,7 @@ target_link_libraries(dvkbuntu-easy-menu-qt
         Qt${QT_VERSION_MAJOR}::Svg
         Qt${QT_VERSION_MAJOR}::WebEngineWidgets
         Qt${QT_VERSION_MAJOR}::Multimedia
-        Qt${QT_VERSION_MAJOR}::Widgets)
+        Qt${QT_VERSION_MAJOR}::Widgets
+        Qt${QT_VERSION_MAJOR}::TextToSpeech)
+
 
