--- a/Linux/AppImageBuilder.yml
+++ b/Linux/AppImageBuilder.yml
@@ -11,7 +11,7 @@ AppDir:
   path: ./AppDir
   app_info:
     id: heficience-menu
-    name: Easy Menu
+    name: Heficience Menu
     icon: heficience-menu
     version: '4.17'
     exec: usr/bin/heficience-menu
