Mise à jour majeur

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 /Testing/Temporary
 /macOS/Installateur/heficience-menu.app/
 /cmake-build-debug/
+/Linux/AppDir/
+/Linux/appimage-builder-cache/
+/Linux/CMakeFiles/
+/Linux/heficience-menu_autogen/
+/Linux/cmake_install.cmake
+/Linux/CMakeCache.txt
+/Linux/Heficience Menu-4.18-x86_64.AppImage
+/Linux/heficience-menu
+/Linux/install_manifest.txt
+/Linux/Makefile
